@@ -1,0 +1,21 @@
+#!/bin/sh
+set -e
+
+rm_diversion() {
+  # Check the divert still belongs to us to avoid trouble
+  # in case the administrator or another package changed it.
+  package=`dpkg-divert --listpackage "$1"`
+  if [ "$package" = "@DH_GST@" ]
+  then
+    dpkg-divert --package @DH_GST@ --rename --remove "$1"
+  fi
+}
+
+if [ "$1" = "remove" -o "$1" = "abort-install" -o "$1" = "disappear" ] ; then
+  rm_diversion /usr/bin/dh_gstscancodecs
+  rm_diversion /usr/share/man/man1/dh_gstscancodecs.1.gz
+fi
+
+#DEBHELPER#
+
+exit 0
