@@ -1,16 +1,0 @@
-#!/bin/sh
-set -e
-
-add_diversion() {
-  dpkg-divert --package @GST_LIB_DEV@ --add --rename \
-    --divert "$1-gst0.10" "$1"
-}
-
-if [ "$1" = "upgrade" ] || [ "$1" = "install" ]; then
-  add_diversion /usr/bin/dh_gstscancodecs
-  add_diversion /usr/share/man/man1/dh_gstscancodecs.1.gz
-fi
-
-#DEBHELPER#
-
-exit 0
