@@ -3,6 +3,3 @@ debian/tmp/usr/lib/*/*.so
 debian/tmp/usr/lib/*/pkgconfig
 debian/tmp/usr/share/aclocal
 debian/tmp/usr/share/gir-*
-debian/tmp/usr/bin/gst-codec-info-@GST_ABI@
-debian/dh_gstscancodecs usr/bin
-debian/tmp/usr/share/man/man1/dh_gstscancodecs.1
